# aoc-2024

./: .gitignore  Cargo.toml  day1.nu  day13.nu  day14.nu  day17.nu  day18.nu  day19.nu  day2.nu  day22.nu  day23.nu  day24.nu  day25.nu  day3.nu  day4.nu  day5.nu  day6.nu  day7.nu  day8.nu  day9.nu  flake.nix  get_day.nu  gleam.toml  manifest.toml  solution.nu
day1/: Cargo.toml  solution.nu
day1/src/: part2.rs
day2/: Cargo.toml  solution.nu
day2/src/: part1.rs  part2.rs
day3/: Cargo.toml
day3/src/: part1.rs  part2.rs
day4/: Cargo.toml
day4/src/: part1.rs
src/: aoc_2024.gleam  utility.gleam
src/day1/: part1.gleam  part2.gleam
src/day10/: part1.gleam  part2.gleam
src/day11/: part1.gleam  part2.gleam
src/day12/: part1.gleam  part2.gleam
src/day13/: part1.gleam  part2.gleam
src/day15/: part1.gleam  part2.gleam
src/day16/: part1.gleam  part2.gleam
src/day2/: part1.gleam  part2.gleam
src/day3/: part1.gleam  part2.gleam
src/day4/: part1.gleam  part2.gleam
src/day5/: :w  part1.gleam  part2.gleam
src/day6/: part1.gleam  part2.gleam
src/day7/: part1.gleam  part2.gleam
src/day8/: part1.gleam  part2.gleam
src/day9/: part1.gleam  part2.gleam
utilities/: Cargo.toml
utilities/src/: lib.rs
